--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
   position: absolute;
   width: 400px;
   height: 151px;
-  top: 54%;
+  top: 571px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
